[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Main/Control.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 40
custom_constants/margin_left = 120
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 120.0
margin_top = 40.0
margin_right = 600.0
margin_bottom = 380.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 14.0
text = "This is Scenes manager"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 480.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 14.0
text = "Scene path:"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 38.0

[node name="SceneTextEdit" type="TextEdit" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 427.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="LoadScene" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 480.0
margin_bottom = 20.0
text = "LOAD"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 480.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 480.0
margin_bottom = 14.0
text = "PCK file name:"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 38.0

[node name="PckTextEdit" type="TextEdit" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 420.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="LoadPck" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 424.0
margin_right = 480.0
margin_bottom = 20.0
text = "LOADS"

[node name="SceneContainer" type="ViewportContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 480.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="Control/MarginContainer/VBoxContainer/SceneContainer"]
handle_input_locally = false
render_target_update_mode = 3
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/LoadScene" to="Control" method="_on_LoadScene_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/LoadPck" to="Control" method="_on_LoadPck_pressed"]
[connection signal="item_rect_changed" from="Control/MarginContainer/VBoxContainer/SceneContainer" to="Control" method="_on_SceneContainer_item_rect_changed"]
